src/index.css
html, body {
  box-sizing: border-box;
  scroll-behavior: smooth;
  font-size: 150%;
  margin: 0;
  padding: 0;
  min-height: 100%;
  max-height: 100%;
  min-width: 100%;
  max-width: 100%;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  overflow-x: hidden;
  overflow-y: auto;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  overflow-y: auto;
}

.App-header {
  font-size: 8px;
}

.App {
  font-size: 8px;
}

.Headers {
  font-size: 26px;
  padding-bottom: 14px;
}

.Results {
  font-size: 16px;
}

.Results_List {
  font-size: 16px;
  list-style-position: inside;
  padding-left: 0;
}

.Text_Submit {
  width: 700px;
  height: 150px;
  max-width: 95%;
}

@media (min-width: 200px) {
  .Text_Submit {
    width: 700px;
  }
}


.fade-enter {
  opacity: 0;
}

.fade-enter-active {
  opacity: 1;
  transition: opacity 1250ms ease-in-out;
}

#git {
  background-image: transparent;
  background-color: transparent;
  border-radius: 50%;
  outline: none;
  height: 80px;
  width: 80px;
  margin-top: 30px;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 0;
  border: transparent;
  margin-bottom: 20px;
  opacity: 0.90;
  transform: scale(0.85);
  transition: .2s ease-in-out;
}

#git:hover {
  opacity: 1.0;
  background-image: transparent;
  background-color: transparent;
  color: #f0f0f0;     
  text-shadow: unset;
  transition: .2s ease-in-out;
  transform: scale(1.0);
}

#git:active {
  transform: scale(0.9);
  transition: .1s ease-in-out;
}

@media only screen and (max-width: 750px) {
  .Text_Submit {
    min-width: 70%;
    max-width: 70%;
  }

  .Results {
    font-size: 16px; 
    padding-left: 40px;
    padding-right: 40px;
  }

  .Headers {
    font-size: 20px; 
    padding-left: 40px;
    padding-right: 40px;
  }

}

@media only screen and (max-width: 500px) {
  .Headers {
    font-size: 20px; 
  }

  .Results {
    font-size: 14px; 
    padding-left: 20px;
    padding-right: 20px;
  }

  .Results_List {
    font-size: 14px; 
  }

  .Text_Submit {
    min-width: 60%;
    max-width: 60%;
  }
}

@media only screen and (max-width: 480px) {
  .Headers {
    font-size: 20px; 
    padding-left: 20px;
    padding-right: 20px;
  }

  .Results {
    font-size: 14px; 
    padding-left: 20px;
    padding-right: 20px;
  }

  .Results_List {
    font-size: 14px; 
  }

  .Text_Submit {
    min-width: 45%;
    max-width: 45%;
  }
}

@media only screen and (max-width: 350px) {
  .Headers {
    font-size: 20px; 
    padding-left: 20px;
    padding-right: 20px;
  }

  .Results {
    font-size: 14px; 
    padding-left: 20px;
    padding-right: 20px;
  }

  .Results_List {
    font-size: 14px; 
  }

  .Text_Submit {
    min-width: 40%;
    max-width: 40%;
  }
}

